# zskills

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  book.toml  release-please-config.json
.github/workflows/: ci.yml  deploy-docs.yml  release-please.yml
docs/: CNAME  SUMMARY.md  architecture.md  commands.md  index.md  troubleshooting.md  use-cases.md
scripts/: build-llms-txt.sh
skills/zskills/: SKILL.md
src/: agent_skill.rs  cli.rs  error.rs  git.rs  interactive.rs  inventory.rs  lockfile.rs  main.rs  manifest.rs  marketplace.rs  mcp.rs  paths.rs  reconcile.rs  repo_scanner.rs  settings.rs  skills_sh.rs
src/commands/: doctor.rs  enable.rs  install.rs  list.rs  marketplace.rs  migrate.rs  migrate_all.rs  migrate_skill.rs  mod.rs  remove.rs  scan.rs  search.rs  sync.rs  update.rs  upgrade.rs
tests/: cli.rs
theme/: custom.css  head.hbs  zot24-home.css  zot24-home.js
