[package]
name = "zskills"
version = "0.4.0"
edition = "2021"
rust-version = "1.86"
description = "Package manager for Claude Code skills — declarative install across marketplaces"
license = "MIT"
repository = "https://github.com/zot24/zskills"
readme = "README.md"
keywords = ["claude", "claude-code", "skills", "plugins", "package-manager"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
toml_edit = { version = "0.22", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
indicatif = "0.17"
owo-colors = "4"
dirs = "5"
tempfile = "3"
sha2 = "0.10"
walkdir = "2"
glob = "0.3"
dialoguer = { version = "0.11", default-features = false }
which = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json", "yaml"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
